<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="music">Music</string>
    <string name="volume">Volume:</string>
    <string name="settings">SETTINGS</string>
    <string name="dark_mode">Dark Mode:</string>
    <string name="back">BACK</string>
    <string name="home">HOME</string>
    <string name="play">PLAY</string>
    <string name="what_am_i">WHAT AM I?</string>
    <string name="settingss">SETTINGS</string>
    <string name="lives">Lives:</string>
    <string name="timer">Timer:</string>
    <string name="best">Best</string>
    <string name="score">Score</string>
    <string name="submit">Submit</string>
    <string name="change_theme">Change</string>
    <string name="restart">Restart:</string>
    <string name="restartbuttontext">Restart</string>
    <string name="instructions" >Welcome to What Am I?! Its a guessing game with increasingly difficult puzzles as you proceed. The puzzles are simple at start, but as the game progresses, they get harder. The objective is to work through each puzzle and overcome the growing difficulty.</string>
    <string name="scoringbase"> There are 25 points available to you. Points are awarded for each accurate response, with easy answers worth one point, medium answers worth three, and hard answers worth five. Your score drops by one point for an incorrect response. If your score hits zero, the game is over. Try to score as high as you can!</string>
    <string name="back_button">Back Button</string>
    <string name="how_to_play">HOW TO PLAY</string>
</resources>